--- a/globalStyles.css
+++ b/globalStyles.css
@@ -114,3 +114,9 @@ textarea {
 #favorite-icon:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 1200px) {
+    #about {
+        display: none;
+    }
+}
