--- a/globalStyles.css
+++ b/globalStyles.css
@@ -106,19 +106,6 @@ textarea {
     }
 }
 
-#modal {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-}
-
 #login {
     display: flex;
     flex-direction: column;
@@ -132,6 +119,6 @@ textarea {
     -moz-box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
     margin: 15% auto; /* 15% from the top and centered */
     padding: 3rem;
-    border: 1px solid #888;
+    margin-top: 1rem;
     width: 25rem;
 }
