--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,124 +1,137 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
 body {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    color: #525252;
-    /* however big the header / footer will be - change these padding values */
-    padding-top: 8rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  color: #525252;
+  /* however big the header / footer will be - change these padding values */
+  padding-top: 8rem;
 }
 
 h1 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 header {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    background-color: white;
-    width: 100%;
-    border-bottom: 4px solid #ffe5d0;
-    padding: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  border-bottom: 4px solid #ffe5d0;
+  padding: 0.5rem;
 }
 
 header div {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
 }
 
 #logo {
-    height: 4rem;
-    align-self: center;
-    padding-right: 1rem;
+  height: 4rem;
+  align-self: center;
+  padding-right: 1rem;
 }
 
 header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    justify-self: end;
-    margin-bottom: 1rem;
-    text-decoration: none;
-    color: black;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  justify-self: end;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: black;
 }
 
 header ul li {
-    display: inline;
-    padding: 1rem;
+  display: inline;
+  padding: 1rem;
 }
 
 a {
-    text-decoration: none;
-    color: #525252;
+  text-decoration: none;
+  color: #525252;
 }
 
 header a:hover {
-    border-bottom: 1px solid #e8dac6;
+  border-bottom: 1px solid #e8dac6;
 }
 
 footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    border-top: 4px solid #ffe5d0;
-    padding: 0rem 5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-top: 4px solid #ffe5d0;
+  padding: 0.5rem 5rem;
 }
 
 footer a:hover {
-    border-bottom: 1px solid #e8dac6;
+  border-bottom: 1px solid #e8dac6;
 }
 
-#recipeCard img{
-    transition: box-shadow 0.5s;
+#recipeCard {
+    width: 300px;
+}
+
+#recipeCard img {
+  transition: box-shadow 0.5s;
 }
 
 #recipeCard img:hover {
-    box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
-    -webkit-box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
-    -moz-box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
+  box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
+  -webkit-box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
+  -moz-box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
 }
 
 textarea {
-    color: #787878;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 300;
+  color: #787878;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
 }
 
 #favorite-icon:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1200px) {
-    #about {
-        display: none;
-    }
+  #about {
+    display: none;
+  }
 }
 
 #login {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    border-radius: 1rem;
-    background-color: #ffe5d0;
-    box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
-    -webkit-box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
-    -moz-box-shadow: 1px 1px 24px -5px rgba(122,114,114,0.51);
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 3rem;
-    margin-top: 1rem;
-    width: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  border-radius: 1rem;
+  background-color: #ffe5d0;
+  box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
+  -webkit-box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
+  -moz-box-shadow: 1px 1px 24px -5px rgba(122, 114, 114, 0.51);
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 3rem;
+  margin-top: 1rem;
+  width: 25rem;
+}
+
+#footer-heart {
+  transition: all 0.5s;
+  border-radius: 50%;
+}
+
+.add-glow {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 5px 15px rgba(145, 92, 182, 0.4);
 }
