dynamically updating recipe page and cards

--- a/public/globalStyles.css
+++ b/public/globalStyles.css
@@ -79,6 +79,10 @@ footer a:hover {
   border-bottom: 1px solid #e8dac6;
 }
 
+a:hover {
+  cursor: pointer;
+}
+
 #recipeCard {
     width: 300px;
 }
