--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,30 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
-/* body {
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
   margin: 0;
-  font-family: "Public Sans", "Noto Sans", "Open Sans", Helvetica, Arial,
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  color: #525252;
+  /* however big the header / footer will be - change these padding values */
+  padding-top: 8rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 } */
+
+footer a:hover {
+  border-bottom: 1px solid #e8dac6;
+}
+
+a:hover {
+  cursor: pointer;
+}
